temp/objects/Insurance_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance Quote</relationshipLabel>
        <relationshipName>Insurance_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Reported_Basis__c</fullName>
        <label>Claims Reported Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claims_Reported_Basis</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Each_Occurence__c</fullName>
        <label>Each Occurence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Aggregate_Limit__c</fullName>
        <label>General Aggregate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy__c</fullName>
        <label>Insurance Policy</label>
        <referenceTo>Insurance_Policy__c</referenceTo>
        <relationshipLabel>Insurance Quote</relationshipLabel>
        <relationshipName>Insurance_Quote</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Insured_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured.Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurance Quote</relationshipLabel>
        <relationshipName>Insurance_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <formula>Insurance_Policy__r.Insured_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insured</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <formula>Insurance_Policy__r.Carrier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Applies_Per__c</fullName>
        <label>Limit Applies Per</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Limit_Applies_Per</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Effective_Date__c</fullName>
        <formula>Insurance_Policy__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Expiration_Date__c</fullName>
        <formula>Insurance_Policy__r.Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance Quote (Producer)</relationshipLabel>
        <relationshipName>Insurance_Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Description__c</fullName>
        <label>Quote Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepared</fullName>
                    <default>true</default>
                    <label>Prepared</label>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Premium__c</fullName>
        <formula>Insurance_Policy__r.Total_Program_Premium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/downloadpdf&quot;, &quot;Quote&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Insurance Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SMARRT_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Price__c</columns>
        <columns>Insurance_Policy__c</columns>
        <columns>Carrier__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>All START Quotes</label>
    </listViews>
    <listViews>
        <fullName>START_WC_Quotes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>ncci</value>
        </filters>
        <label>START WC Quotes</label>
    </listViews>
    <nameField>
        <displayFormat>IQ-{000000000}</displayFormat>
        <label>Insurance Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>